assignment3/app-2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
