assignment3/app-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
  labels:
    app: app2

spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: service-app2
            port:
              number: 80
